feat:1.增加获取玩具详情接口；2.增加跳转详情路由
